--- a/index.css
+++ b/index.css
@@ -2,22 +2,21 @@ body {
   padding-top: 50px;
 }
 .img-thumbnail{
- /*float: left;*/
- /*vertical-align: middle;*/
  position: relative;
 }
 
 .result-box{
   margin-bottom: 15px;
   margin-right: 10px;
-  
 }
 .info{
   display: inline;
   position: absolute;
-  left : 150px;
+  left : 350px;
 }
 .video-title{
   font-weight: bold;
-  
+}
+.next-button, .prev-button{
+  margin: 15px;
 }
